make the top bar structure

--- a/index.html
+++ b/index.html
@@ -1,40 +1,34 @@
+
+</html>
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Design Mastery | Travel.co</title>
+    <title>Roam Sri Lanka </title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
- <nav>
-   <div class="nav_logo"><a href="#">Travel.co</a></div>
-   <ul class="nav_links">
-      <li class="link">Home</li>
-      <li class="link">Blog</li>
-      <li class="link">Discounts</li>
-      <li class="link">Services</li>
-      <li class="link">Contacts</li>
-   </ul>
-
-
-</nav>
-
-<header>
-    <div class="section_container">
-        <div class="header_container">
-            <h1>Travel</h1>
-            <p>
-               Embark on a journey of a lifetime and explore the world's most
-                breathtaking destinations with our expert travel advice.
-                From exotic beaches to cultural wonders, we've got you covered 
-                with our comprehensive travel guides and insider tips. 
-
-            </p>
-        </div>
-    </div>
-</header>
-
+    <header>
+        <h1>Roam Sri Lanka </h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="search-bar">
+                <input type="text" placeholder="Search...">
+                <button type="submit">Search</button>
+            </div>
+        </nav>
+    </header>
 </body>
 
 </html>
